# smartcalc-tauri

./: Cargo.toml  readme.md
examples/console/: Cargo.toml
examples/console/src/: main.rs
src/: lib.rs  smartcalc.rs  types.rs
